feat: start adding microservice files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,11 +7,14 @@
     "baylocations",
     "cabinsections",
     "cargohold",
+    "GOARCH",
+    "gofmt",
     "groundstability",
     "interiorlocation",
     "loadlimits",
     "maxweight",
     "seatrow",
-    "stabtrim"
+    "stabtrim",
+    "testcache"
   ]
 }
