--- a/.github/workflows/ui-checks.yml
+++ b/.github/workflows/ui-checks.yml
@@ -8,9 +8,10 @@ on:
   pull_request:
 
 env:
-  GO_VERSION: "1.25"
+  NODE_VERSION: "lts/*"
 
 jobs:
+  # Test build the application.
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -18,3 +19,150 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: Install pnpm
+        run: npm install -g pnpm
+
+      - name: Install dependencies
+        run: |
+          cd ads-ui
+          pnpm install
+
+      - name: Build
+        run: |
+          cd ads-ui
+          pnpm run build
+
+  # Run all unit testing libraries, e2e tests are done separately.
+  # This uses Vitest.
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: Install pnpm
+        run: npm install -g pnpm
+
+      - name: Install dependencies
+        run: |
+          cd ads-ui
+          pnpm install
+
+      - name: Run Tests
+        run: |
+          cd ads-ui
+          pnpm run test
+
+  # Run e2e tests using Playwright.
+  e2e:
+    name: e2e Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: Install pnpm
+        run: npm install -g pnpm
+
+      - name: Install dependencies
+        run: |
+          cd ads-ui
+          pnpm install
+
+      - name: Install Playwright Browsers
+        run: |
+          cd ads-ui
+          pnpm exec playwright install --with-deps
+
+      - name: Run Playwright tests
+        run: |
+          cd ads-ui
+          pnpm e2e
+
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: ads-ui/playwright-report/
+          retention-days: 30
+
+  # All style and lint checks:
+  # - Prettier check for code format.
+  # - ESLint check for code quality.
+  style:
+    name: Style and Linting
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+
+      - name: Install pnpm
+        run: npm install -g pnpm
+
+      - name: Install dependencies
+        run: |
+          cd ads-ui
+          pnpm install
+
+      - name: Run Prettier Check
+        run: |
+          cd ads-ui
+          pnpm run check
+
+      - name: Run Lint Check
+        run: |
+          cd ads-ui
+          pnpm run lint
+
+  # Creates an output of stats.html that visualizes the bundle size.
+  # This uploaded as an artifact to the PR.
+  bundle:
+    name: Bundle Analysis
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: Install pnpm
+        run: npm install -g pnpm
+
+      - name: Install dependencies
+        run: |
+          cd ads-ui
+          pnpm install
+
+      - name: Run Prettier Bundle Analyse
+        run: |
+          cd ads-ui
+          pnpm run bundle:analyse
+
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: bundle-analysis
+          path: ads-ui/dist/stats.html
