ci: add sonar qube cicd

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,8 +15,11 @@
     "loadlimits",
     "maxweight",
     "pnpx",
+    "Qube",
     "seatrow",
+    "sonarqube",
     "stabtrim",
+    "stretchr",
     "testcache",
     "Vitest"
   ]
