feat: start adding sqlc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,16 +8,20 @@
     "baylocations",
     "cabinsections",
     "cargohold",
+    "DBTX",
     "GOARCH",
     "gofmt",
     "groundstability",
     "interiorlocation",
     "loadlimits",
     "maxweight",
+    "pgconn",
+    "pgtype",
     "pnpx",
     "Qube",
     "seatrow",
     "sonarqube",
+    "sqlc",
     "stabtrim",
     "stretchr",
     "testcache",
