--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,9 @@ sonar.sources=.
 
 
 # Exclude Go test files and TypeScript spec files
-sonar.exclusions=**/*_test.go,**/*.spec.ts
+sonar.exclusions=**/*_test.go,\
+                 **/*.spec.ts,\
+                 ads-backend/internal/sqlc/**
 
 
 # Backend test coverage report path
