feat: fetch maximum weight data from db

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,9 +10,11 @@
     "cargohold",
     "DBTX",
     "GOARCH",
+    "godotenv",
     "gofmt",
     "groundstability",
     "interiorlocation",
+    "joho",
     "loadlimits",
     "maxweight",
     "pgconn",
