--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -7,6 +7,10 @@ on:
       - "release/*"
   pull_request:
 
+env:
+  GO_VERSION: "1.25"
+  NODE_VERSION: "lts/*"
+
 jobs:
   sonarqube:
     name: SonarQube
@@ -17,10 +21,21 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Go Setup
+        uses: actions/setup-go@v4
+        with:
+          go-version: ${{ env.GO_VERSION }}
+
       - name: Backend coverage
         run: |
           cd ads-backend
+          go install github.com/sqlc-dev/sqlc/cmd/sqlc@latest
           make coverage
+
+      - name: Node Setup
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
 
       - name: UI coverage
         run: |
