chore: tidy up sonar exclusions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,8 @@ sonar.sources=.
 # Exclude Go test files and TypeScript spec files
 sonar.exclusions=**/*_test.go,\
                  **/*.spec.ts,\
-                 ads-backend/internal/sqlc/**,\
+                 ads-backend/generated/**,\
+                 ads-backend/sql/**,\
                  ads-backend/cmd/**
 
 
