--- a/ads-backend/sqlc.yml
+++ b/ads-backend/sqlc.yml
@@ -1,8 +1,8 @@
 version: "2"
 sql:
   - engine: "postgresql"
-    queries: "sql/query/query.sql"
-    schema: "sql/schema/schema.sql"
+    queries: "sql/query.sql"
+    schema: "sql/schema.sql"
     gen:
       go:
         package: "sqlc"
