feat: now fetching ac and mw with gateway through manage service

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,11 +13,13 @@
     "GOARCH",
     "godotenv",
     "gofmt",
+    "gonic",
     "groundstability",
     "interiorlocation",
     "joho",
     "loadlimits",
     "maxweight",
+    "maxweights",
     "pgconn",
     "pgtype",
     "pnpx",
