ci: remove code coverage from analysis

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.projectName=aircraft-departure-simulator
 sonar.sources=.
 
 
-# Exclude Go test files and TypeScript spec files
+# Exclude Go test files and TypeScript spec files.
 sonar.exclusions=**/*_test.go,\
                  **/*.spec.ts,\
                  ads-backend/generated/**,\
@@ -18,9 +18,13 @@ sonar.exclusions=**/*_test.go,\
                  ads-backend/cmd/**
 
 
-# Backend test coverage report path
+# Backend test coverage report path.
 sonar.go.coverage.reportPaths=ads-backend/coverage.out
 
 
-# UI test coverage report path
+# UI test coverage report path.
 sonar.javascript.lcov.reportPaths=ads-ui/coverage/lcov.info
+
+
+# Don't include code coverage.
+sonar.coverage.exclusions=.
